MBD - initial draft

--- a/NeuRec.ini
+++ b/NeuRec.ini
@@ -2,9 +2,9 @@
 recommender = MF
 
 ;backend = tensorflow, pytorch
-platform = pytorch
+platform = tensorflow
 
-data_dir = dataset/ml-100k_ratio_u5_i5
+data_dir = 'dataset\ml-100k_ratio_u5_i5'
 ; file_column = UI, UIR, UIT, UIRT
 file_column = UIRT
 sep = '\t'
@@ -13,7 +13,7 @@ gpu_id = 0
 gpu_mem = 0.99
 
 ;metric = ["Precision", "Recall", "MAP", "NDCG", "MRR"]
-metric = ["Recall", "NDCG"]
+metric = ["Precision", "Recall", "MAP", "NDCG", "MRR"]
 top_k = [10,20]
 
 test_thread = 4
