--- a/NeuRec.ini
+++ b/NeuRec.ini
@@ -2,7 +2,7 @@
 recommender = MF
 
 ;backend = tensorflow, pytorch
-platform = tensorflow
+platform = pytorch
 
 data_dir = 'dataset\ml-100k_ratio_u5_i5'
 ; file_column = UI, UIR, UIT, UIRT
@@ -16,7 +16,7 @@ gpu_mem = 0.99
 metric = ["Precision", "Recall", "MAP", "NDCG", "MRR"]
 top_k = [10,20]
 
-test_thread = 4
+test_thread = 8
 ; large test_batch_size might cause GPU memory-consuming,
 ; especially dataset is large
 test_batch_size = 64
